[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ruslan Shamsutdinov <nexus191@yandex.ru>"]
readme = "README.md"
packages = [ {include = "brain_games"} ]


[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.games.brain_even:parity_check"
brain-calc = "brain_games.games.brain_calc:calculator_test"
brain-gcd = "brain_games.games.brain_gcd:gcd_test"
brain-progr = "brain_games.games.brain_progression:progression_test"
brain-prime = "brain_games.games.brain_prime:prime_test"